# engsci-roadmap.github.io

./: .gitignore  DEPLOY.md  LICENSE.md  README.md  deploy.sh  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
assets/: ECE159-up1LYNDR.js  Y1F-DYEcpBLM.js  Y1W-UD05ThrX.js  Y2F-CZrBMvAt.js  Y2W-axwPT_YP.js  index-0nUMbS72.js  index-1ee3yq2r.css  index-2jacQbQ5.css  index-2y3_5Q35.js  index-8xPsw8s1.css  index-B5ONqm7i.js  index-BCDoEnoh.css  index-BVGC7AfC.css  index-BbKYni52.js  index-BcWJnZ2h.js  index-Bi4Tspbs.js  index-BiverWyR.js  index-BmfY1EGc.js  index-BmkTC3xV.js  index-BpSqqWNw.js  index-ByxWi_JN.js  index-C3S1UaFN.js  index-C8gEvoPp.js  index-CCAj8DSe.css  index-CEwTsAbZ.js  index-CK8HLHLv.css  index-CPg-o9pB.css  index-CWK5Mxl-.js  index-C_6BuiOY.css  index-CkCX6Bjw.js  index-Cr1-zOu2.js  index-Crjf8sVE.css  index-CsKijxUx.js  index-Cu6g3Giu.js  index-D1a848dJ.js  index-DEQMR-Hy.js  index-DFvCEr08.js  index-DHap7y-F.js  index-DLAglDtp.js  index-DYRZMcCK.js  (+24 more)
client/: index.html  package-lock.json  package.json
data/: courses.json
engsci-platform/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
public/: 404.html
rag-flow/: README.md
rag-tool/: Makefile  README.md  pyproject.toml
rag-tool/docs/: mkdocs.yml
rag-tool/docs/docs/: index.md
rag-tool/notebooks/: web_scraping.py
rag-tool/rag_tool/: __init__.py  dataset.py  features.py  plots.py
rag-tool/rag_tool/modeling/: predict.py  train.py
rag-tool/reports/proposal/: proposal.aux  proposal.fdb_latexmk  proposal.fls  proposal.tex  style.sty
(+136 files in other folders)
